Corrected grid spacing

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,13 @@
 @import url("reset.css");
 
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
+    height: 100%;
+    width: 100%;
     background-color: rgb(255 255 255);
 }
 
